syntax = "proto3";

package com.pellervoinen.athlete;

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "google/api/annotations.proto";

// Commands
message CreateAthleteCommand {
  string username = 1 [(kalix.field).entity_key = true];
  int32 birth_year = 2;
}

message GetAthleteCommand {
  string username = 1 [(kalix.field).entity_key = true];
}

message CalculateTrainingImpactCommand {
  string username = 1 [(kalix.field).entity_key = true];
  repeated Workout workouts = 2;
}

service AthleteService {
  option (kalix.codegen) = {
    value_entity: {
      name: "com.pellervoinen.athlete.domain.Athlete"
      entity_type: "athlete"
      state: "com.pellervoinen.athlete.domain.AthleteState"
    }
  };

  rpc CreateAthlete(CreateAthleteCommand) returns (google.protobuf.Empty){
  }

  rpc GetAthlete(GetAthleteCommand) returns (Athlete) {
  }

  rpc CalculateTrainingImpact(CalculateTrainingImpactCommand) returns (google.protobuf.Empty) {
  }
}

// Views

message Athlete {
  string username = 1;
  int32 birth_year = 2;
  int32 fatigue_score = 3;
  int32 fitness_score = 4;
  int32 readiness_score = 5;
}

message SetItem {
  string set_id = 1;
  string exercise_name = 2;
  int32 reps = 3;
  int32 weight = 4;
  int64 timestamp = 5;
}

message Workout {
  string workout_id = 1 [(kalix.field).entity_key = true];
  repeated SetItem sets = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  string username = 5;
  int32 exhaustion_rating = 6;
}